@@ -9,7 +9,6 @@ import com.dotmarketing.exception.DotRuntimeException;
 import com.dotmarketing.util.Config;
 import com.dotmarketing.util.Logger;
 import com.dotmarketing.util.UtilMethods;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ImmutableMap;
 import com.liferay.util.StringPool;
@@ -35,12 +34,14 @@ import org.apache.http.impl.client.HttpClientBuilder;
 import javax.servlet.ServletOutputStream;
 import javax.servlet.WriteListener;
 import javax.servlet.http.HttpServletResponse;
+import javax.validation.constraints.NotNull;
+import javax.ws.rs.core.HttpHeaders;
+import javax.ws.rs.core.MediaType;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.Serializable;
 import java.net.URISyntaxException;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -66,19 +67,30 @@ import java.util.concurrent.RejectedExecutionException;
  */
 public class CircuitBreakerUrl {
 
+    private static final Lazy<Integer> circuitBreakerMaxConnTotal =
+            Lazy.of(() -> Config.getIntProperty("CIRCUIT_BREAKER_MAX_CONN_TOTAL", 100));
+    private static final Lazy<Boolean> allowAccessToPrivateSubnets =
+            Lazy.of(() -> Config.getBooleanProperty("ALLOW_ACCESS_TO_PRIVATE_SUBNETS", false));
+    private static final CircuitBreakerConnectionControl circuitBreakerConnectionControl =
+            new CircuitBreakerConnectionControl(circuitBreakerMaxConnTotal.get());
+
     private final String proxyUrl;
     private final long timeoutMs;
     private final CircuitBreaker circuitBreaker;
     private final HttpRequestBase request;
     private final boolean verbose;
     private final String rawData;
-    private int response=-1;
+    private int response = -1;
     private Header[] responseHeaders;
     private final boolean allowRedirects;
+    private final boolean throwWhenNot2xx;
 
-    private static final Lazy<Integer> circuitBreakerMaxConnTotal = Lazy.of(()->Config.getIntProperty("CIRCUIT_BREAKER_MAX_CONN_TOTAL",100));
-    private static final Lazy<Boolean> allowAccessToPrivateSubnets = Lazy.of(()->Config.getBooleanProperty("ALLOW_ACCESS_TO_PRIVATE_SUBNETS", false));
-    private static final CircuitBreakerConnectionControl circuitBreakerConnectionControl = new CircuitBreakerConnectionControl(circuitBreakerMaxConnTotal.get());
+    public static final Response<String> EMPTY_RESPONSE = new Response<>(StringPool.BLANK, 0, new Header[] {});
+
+    public enum Method {
+        GET, POST, PUT, DELETE, PATCH
+    }
+
     /**
      * 
      * @param proxyUrl
@@ -107,39 +119,53 @@ public class CircuitBreakerUrl {
         this(proxyUrl, timeoutMs, circuitBreaker, false);
     }
 
-    public CircuitBreakerUrl(String proxyUrl, long timeoutMs, CircuitBreaker circuitBreaker, boolean verbose) {
-      this(proxyUrl, timeoutMs, circuitBreaker, new HttpGet(proxyUrl), ImmutableMap.of(),ImmutableMap.of(), verbose, null);
+    public CircuitBreakerUrl(final String proxyUrl,
+                             final long timeoutMs,
+                             final CircuitBreaker circuitBreaker,
+                             final boolean verbose) {
+      this(
+          proxyUrl,
+          timeoutMs,
+          circuitBreaker,
+          new HttpGet(proxyUrl),
+          Map.of(),
+          Map.of(),
+          verbose,
+          null);
+    }
+
+    @VisibleForTesting
+    public CircuitBreakerUrl(final String proxyUrl,
+                             final long timeoutMs,
+                             final CircuitBreaker circuitBreaker,
+                             final HttpRequestBase request,
+                             final Map<String, String> params,
+                             final Map<String, String> headers,
+                             final boolean verbose,
+                             final String rawData) {
+        this(proxyUrl, timeoutMs, circuitBreaker, request, params, headers,  verbose, rawData, false, true);
     }
     
-    
     @VisibleForTesting
-    public CircuitBreakerUrl(String proxyUrl, long timeoutMs, CircuitBreaker circuitBreaker, HttpRequestBase request,
-            Map<String, String> params, Map<String, String> headers, boolean verbose, final String rawData) {
-        this(proxyUrl, timeoutMs, circuitBreaker, request,
-                        params, headers,  verbose, rawData, false); 
-        
-    }
-    
-    /**
-     * Full featured constructor
-     * 
-     * @param proxyUrl
-     * @param timeoutMs
-     * @param circuitBreaker
-     * @param request
-     * @param params
-     * @param headers
-     */
-    @VisibleForTesting
-    public CircuitBreakerUrl(String proxyUrl, long timeoutMs, CircuitBreaker circuitBreaker, HttpRequestBase request,
-            Map<String, String> params, Map<String, String> headers, boolean verbose, final String rawData, boolean allowRedirects) {
+    public CircuitBreakerUrl(final String proxyUrl,
+                             final long timeoutMs,
+                             final CircuitBreaker circuitBreaker,
+                             final HttpRequestBase request,
+                             final Map<String, String> params,
+                             final Map<String, String> headers,
+                             final boolean verbose,
+                             final String rawData,
+                             final boolean allowRedirects,
+                             final boolean throwWhenNot2xx) {
         this.proxyUrl = proxyUrl;
         this.timeoutMs = timeoutMs;
         this.circuitBreaker = circuitBreaker;
-        this.verbose=verbose;
+        this.verbose = verbose;
         this.request = request;
-        this.rawData=rawData;
-        this.allowRedirects=allowRedirects;
+        this.rawData = rawData;
+        this.allowRedirects = allowRedirects;
+        this.throwWhenNot2xx = throwWhenNot2xx;
+
         for (final String head : headers.keySet()) {
             request.addHeader(head, headers.get(head));
         }
@@ -165,14 +191,23 @@ public class CircuitBreakerUrl {
         } catch (URISyntaxException e) {
             throw new DotStateException(e);
         }
-
-
     }
 
     public String doString() throws IOException {
         try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
             doOut(out);
-            return out.toString();
+            final String output = out.toString();
+            if (!isWithin2xx(this.response)) {
+                Logger.warn(
+                    this,
+                    String.format(
+                        "Invalid response detected when consuming [%s] with http status [%d] and response:%s%s",
+                        this.proxyUrl,
+                        this.response,
+                        System.lineSeparator(),
+                        output));
+            }
+            return output;
         }
     }
 
@@ -194,7 +229,7 @@ public class CircuitBreakerUrl {
 
                     @Override
                     public void setWriteListener(WriteListener writeListener) {
-
+                        // no-op
                     }
                 };
             }
@@ -220,7 +255,7 @@ public class CircuitBreakerUrl {
                     })
                     .onFailure(failure -> Logger.warn(this, "Connection attempts failed " + failure.getMessage()))
                     .run(ctx -> {
-                        RequestConfig config = RequestConfig.custom()
+                        final RequestConfig config = RequestConfig.custom()
                                 .setConnectTimeout(Math.toIntExact(this.timeoutMs))
                                 .setRedirectsEnabled(allowRedirects)
                                 .setConnectionRequestTimeout(Math.toIntExact(this.timeoutMs))
@@ -242,11 +277,17 @@ public class CircuitBreakerUrl {
                                 this.response = innerResponse.getStatusLine().getStatusCode();
 
                                 IOUtils.copy(innerResponse.getEntity().getContent(), out);
+                            } catch (IOException ex) {
+                                Logger.error(
+                                    this,
+                                    String.format("Error accessing [%s] due to [%s]", proxyUrl, ex.getMessage()),
+                                    ex);
+                                throw ex;
                             }
                             
                             // throw an error if the request is bad
-                            if(this.response<200 || this.response>299){
-                                throw new BadRequestException("got invalid response for url: " + this.proxyUrl + " response: " + this.response);
+                            if (!isWithin2xx(this.response) && throwWhenNot2xx) {
+                                throw new BadRequestException("Got invalid response for url: " + this.proxyUrl + " response: " + this.response);
                             }
                         }
                     });
@@ -257,6 +298,46 @@ public class CircuitBreakerUrl {
 
             circuitBreakerConnectionControl.end(Thread.currentThread().getId());
         }
+    }
+
+    public int response() {
+        return this.response;
+    }
+
+    public static boolean isWithin2xx(final int response) {
+        return response >= 200 && response <= 299;
+    }
+
+    public <T extends Serializable> T doObject(final Class<T> clazz) {
+        return Try.of(() -> DotObjectMapperProvider.getInstance().getDefaultObjectMapper().readValue(doString(), clazz))
+                .onFailure(e -> Logger.warnAndDebug(CircuitBreakerUrl.class, e))
+                .getOrElse((T) null);
+    }
+
+    public <T extends Serializable> Response<T> doResponse(final Class<T> clazz) {
+        return Try.of(() -> new Response<>(this, clazz)).getOrElse((Response<T>) null);
+    }
+
+    public Response<String> doResponse() {
+        try {
+            return new Response<>(this);
+        } catch (IOException e) {
+            Logger.error(this, e.getMessage(), e);
+            return null;
+        }
+    }
+
+    /**
+     * Retrieve the response headers
+     * @return Header
+     */
+    public Header[] getResponseHeaders() {
+        return responseHeaders;
+    }
+
+    @Override
+    public String toString() {
+        return "CircuitBreakerUrl [proxyUrl=" + proxyUrl + ", timeoutMs=" + timeoutMs + ", circuitBreaker=" + circuitBreaker + "]";
     }
 
     private void copyHeaders(final HttpResponse innerResponse, final HttpServletResponse response) {
@@ -273,56 +354,35 @@ public class CircuitBreakerUrl {
         }
     }
 
-    public int response() {
-      return this.response;
+    public static Map<String, String> authHeaders(final String token) {
+        return ImmutableMap.<String, String>builder()
+                .put(HttpHeaders.AUTHORIZATION, token)
+                .put(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
+                .build();
+    }
+
+    /**
+     * Evaluates if a given status code instance has a http status within the SUCCESSFUL range.
+     *
+     * @param statusCode http status code
+     * @return true if the response http status is considered tobe successful, otherwise false
+     */
+    public static boolean isSuccessResponse(final int statusCode) {
+        return javax.ws.rs.core.Response.Status.Family.familyOf(statusCode) == javax.ws.rs.core.Response.Status.Family.SUCCESSFUL;
+    }
+
+    /**
+     * Evaluates if a given status code instance has a http status within the SUCCESSFUL range.
+     *
+     * @param response http response representation
+     * @return true if the response http status is considered tobe successful, otherwise false
+     */
+    public static boolean isSuccessResponse(@NotNull final CircuitBreakerUrl.Response<?> response) {
+        return isSuccessResponse(response.getStatusCode());
     }
 
     public static CircuitBreakerUrlBuilder builder() {
         return new CircuitBreakerUrlBuilder();
-    }
-
-
-    @Override
-    public String toString() {
-        return "CircuitBreakerUrl [proxyUrl=" + proxyUrl + ", timeoutMs=" + timeoutMs + ", circuitBreaker=" + circuitBreaker + "]";
-    }
-
-    final static TypeReference<HashMap<String,Object>> typeRef = new TypeReference<HashMap<String,Object>>() {};
-
-    public Map<String,Object> doMap() {
-        return Try.of(() -> DotObjectMapperProvider.getInstance()
-                .getDefaultObjectMapper()
-                .readValue(doString(), typeRef))
-            .onFailure(e->Logger.warnAndDebug(CircuitBreakerUrl.class, e))
-            .getOrElse(HashMap::new);
-    }
-
-    public <T extends Serializable> T doObject(final Class<T> clazz) {
-        return Try.of(() -> DotObjectMapperProvider.getInstance().getDefaultObjectMapper().readValue(doString(), clazz))
-            .onFailure(e -> Logger.warnAndDebug(CircuitBreakerUrl.class, e))
-            .getOrElse((T) null);
-    }
-
-    public <T extends Serializable> Response<T> doResponse(final Class<T> clazz) {
-        return Try.of(() -> new Response<>(this, clazz)).getOrElse((Response<T>) null);
-    }
-
-    public Response<String> doResponse() {
-        try {
-            return new Response(this);
-        } catch (IOException e) {
-            Logger.error(this, e.getMessage(), e);
-            return null;
-        }
-    }
-
-    public Header[] getResponseHeaders() {
-        return responseHeaders;
-    }
-
-    public enum Method {
-        GET, POST, PUT, DELETE, PATCH;
-
     }
 
     public static class CircuitBreakerConnectionControl {
@@ -337,7 +397,6 @@ public class CircuitBreakerUrl {
         public void check(final String proxyUrl) {
 
             if (threadIdConnectionCountSet.size() >= maxConnTotal) {
-
                 Logger.info(this, "The maximum number of connections has been reached, size: " +
                         threadIdConnectionCountSet.size() + ", url: " + proxyUrl);
                 throw new RejectedExecutionException("The maximum number of connections has been reached.");
@@ -345,24 +404,28 @@ public class CircuitBreakerUrl {
         }
 
         public void start(final long id) {
-
             threadIdConnectionCountSet.add(id);
         }
 
         public void end(final long id) {
-
             threadIdConnectionCountSet.remove(id);
         }
+
     }
 
-    public static class Response<T extends Serializable> {
+    public static class Response<T extends Serializable> implements Serializable {
 
         private final T response;
         private final int statusCode;
 
-        private Response(final T response, final int statusCode) {
+        // this is not serializable, so we need to make it transient or figured out how to do serialization
+        private final transient Header[] responseHeaders;
+
+
+        private Response(final T response, final int statusCode, final Header[] responseHeaders) {
             this.response = response;
             this.statusCode = statusCode;
+            this.responseHeaders = responseHeaders;
         }
 
         Response(final CircuitBreakerUrl circuitBreakerUrl, final Class<T> clazz) throws IOException {
@@ -370,12 +433,17 @@ public class CircuitBreakerUrl {
                 clazz.equals(String.class)
                     ? clazz.cast(circuitBreakerUrl.doString())
                     : circuitBreakerUrl.doObject(clazz),
-                circuitBreakerUrl.response()
+                circuitBreakerUrl.response(),
+                circuitBreakerUrl.getResponseHeaders()
             );
         }
 
         Response(final CircuitBreakerUrl circuitBreakerUrl) throws IOException {
             this(circuitBreakerUrl, (Class<T>) String.class);
+        }
+
+        public Header[] getResponseHeaders() {
+            return responseHeaders;
         }
 
         public T getResponse() {
@@ -393,8 +461,7 @@ public class CircuitBreakerUrl {
                 ", statusCode=" + statusCode +
                 '}';
         }
-    }
 
-    public static Response<String> EMPTY_RESPONSE = new Response<>(StringPool.BLANK, 0);
+    }
 
 }
